--- a/sendmail/templates/index.html
+++ b/sendmail/templates/index.html
@@ -17,7 +17,7 @@
 			<section class="flex items-center justify-center h-screen" role="group">
 				<!-- <h1 class="text-5xl">Django + Tailwind = ❤️</h1><br> -->
 				
-				<!-- Add -->
+				<!-- Add a Staff -->
 				<a href="{% url 'add-staff' %}">
 					<button type="button" class="inline-flex items-center px-4 py-2 border border-gray-300 rounded-md shadow-sm 
 											text-lg font-medium text-gray-700 bg-white hover:bg-gray-50 focus:outline-none 
