--- a/sendmail/templates/addstaff.html
+++ b/sendmail/templates/addstaff.html
@@ -32,7 +32,7 @@
                     <div class="space-y-px">                        
                         {% for field in form %}
                             <div>
-                                {% render_field field  placeholder=field.label class+="text-2xl font-medium relative block w-full p-3 rounded-md border border-gray-400 placeholder-gray-500 text-gray-900 focus:outline-none focus:ring-indigo-500 focus:border-indigo-500 focus:z-10 sm:text-sm" %}                                
+                                {% render_field field  placeholder=field.label class+="lg:text-md font-medium relative block w-full p-3 rounded-md border border-gray-400 placeholder-gray-500 text-gray-900 focus:outline-none focus:ring-indigo-500 focus:border-indigo-500 focus:z-10 sm:text-sm" %}                                
                             </div>
                         {% endfor %}
                     </div>        
@@ -59,9 +59,16 @@
                 </form>
                          
                 <!-- Back to Home page -->
-                <div class="container flex items-centerjustify-between">
+                <div class="container flex items-center">
                     <a href="{% url 'index' %}"
-                        class="text-md font-medium mx-auto text-indigo-600 mt-8 underline underline-offset-2 hover:text-indigo-500">Back to Index</a>
+                        class="inline-flex text-sm font-medium mx-auto text-gray-700 mt-8 px-4 py-2 border 
+                            rounded-md border-gray-300 bg-white hover:bg-gray-50 focus:outline-none 
+                            focus:ring-2 focus:ring-offset-2 focus:ring-gray-300">
+                            <svg xmlns="http://www.w3.org/2000/svg" class="-ml-1 mr-2 h-5 w-5" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2">
+                                <path stroke-linecap="round" stroke-linejoin="round" d="M10 19l-7-7m0 0l7-7m-7 7h18" />
+                            </svg>
+                            Dashboard
+                    </a>
                 </div>
             </div>
         </div>
