--- a/sendmail/templates/index.html
+++ b/sendmail/templates/index.html
@@ -42,6 +42,20 @@
 					</button>
 				</a>
 
+				<!-- Delete -->
+				<a>
+					<button type="button" class="inline-flex items-center mr-4 px-4 py-2 border border-red-600 rounded-md shadow-sm 
+											text-lg font-medium text-white bg-red-600 hover:border-red-500 hover:bg-red-500 
+											focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-red-300">
+						<svg xmlns="http://www.w3.org/2000/svg" class="-ml-1 mr-2 text-white h-5 w-5" fill="none" viewBox="0 0 24 24" stroke="currentColor"
+							stroke-width="2">
+							<path stroke-linecap="round" stroke-linejoin="round"
+								d="M19 7l-.867 12.142A2 2 0 0116.138 21H7.862a2 2 0 01-1.995-1.858L5 7m5 4v6m4-6v6m1-10V4a1 1 0 00-1-1h-4a1 1 0 00-1 1v3M4 7h16" />
+						</svg>
+						Remove a Staff
+					</button>
+				</a>
+
 				<!-- Check for Birthday -->				
 				<a href="{% url 'birthday' %}" target="_blank">
 					<button type="button" class="inline-flex items-center px-4 py-2 border border-indigo-700 rounded-md shadow-sm 
@@ -53,20 +67,6 @@
 								d="M21 15.546c-.523 0-1.046.151-1.5.454a2.704 2.704 0 01-3 0 2.704 2.704 0 00-3 0 2.704 2.704 0 01-3 0 2.704 2.704 0 00-3 0 2.704 2.704 0 01-3 0 2.701 2.701 0 00-1.5-.454M9 6v2m3-2v2m3-2v2M9 3h.01M12 3h.01M15 3h.01M21 21v-7a2 2 0 00-2-2H5a2 2 0 00-2 2v7h18zm-3-9v-2a2 2 0 00-2-2H8a2 2 0 00-2 2v2h12z" />
 						</svg>						
 						Check for Birthdays					
-					</button>
-				</a>
-
-				<!-- Delete -->
-				<a>
-					<button type="button" class="inline-flex items-center mx-4 px-4 py-2 border border-red-600 rounded-md shadow-sm 
-											text-lg font-medium text-white bg-red-600 hover:border-red-500 hover:bg-red-500 
-											focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-red-300">
-						<svg xmlns="http://www.w3.org/2000/svg" class="-ml-1 mr-2 text-white h-5 w-5" fill="none" viewBox="0 0 24 24" stroke="currentColor"
-							stroke-width="2">
-							<path stroke-linecap="round" stroke-linejoin="round"
-								d="M19 7l-.867 12.142A2 2 0 0116.138 21H7.862a2 2 0 01-1.995-1.858L5 7m5 4v6m4-6v6m1-10V4a1 1 0 00-1-1h-4a1 1 0 00-1 1v3M4 7h16" />
-						</svg>
-						Remove a Staff
 					</button>
 				</a>
 			</section>
